# xmobar-slots

./: Cargo.toml  README.md
src/: game.rs  games.rs  main.rs  slots.rs
src/games/: roulette.rs  slots.rs
