[package]
name = "xmobet"
description = "Slot machine for xmobar"
repository = "https://github.com/impossibletea/xmobet"
version = "0.1.1"
authors = [ "impossibleTea" ]
edition = "2021"
license = "MIT OR Apache-2.0"
categories = [ "command-line-utilities", "games" ]

[dependencies]
confy = "0.5.1"
random = "0.13.2"
serde = { version = "1.0.152", features = ["derive"] }
signal-hook = "0.3.14"
toml = "0.7.2"
